--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -4,64 +4,189 @@ name: Plan using terragrunt
 
 on:
   workflow_dispatch:
-#   pull_request_target:
-#     types: 
-#       - opened
-#     branches:
-#       - 'main'
-#     paths:
-#       - "terraform/**"
+    inputs:
+      DEFAULT_APPLICATION_ENVIRONMENT:
+        required: false
+        type: string
+        default: DEV
+      TARGET_ENV:
+        required: false
+        type: string
+        default: dev
+      IMAGE_TAG:
+        required: false
+        type: string
+        default: "pr-877"
+      IS_HOTFIX:
+        required: false
+        type: string
+        default: 'false'
+
+      MAX_RECEIVED_COUNT:
+        required: false
+        type: number
+        default: 10
+      VISIBILITY_TIMEOUT_SECONDS:
+        required: false
+        type: number
+        default: 10
+      ACCEPTED_IPS:
+        required: false
+        type: string
+        default: ""
+      PUSH_NOTIFICATION_AWS_USER:
+        required: false
+        type: string
+        default: ""
+      EVENT_BRIDGE_ARN:
+        required: false
+        type: string
+        default: ""
+      WFNEWS_URL:
+        required: false
+        type: string
+        default: ""
+      SECRET_NAME:
+        required: false
+        type: string
+        default: ""
+      BAN_PROHIBITION_MONITOR_KEY:
+        required: false
+        type: string
+        default: ""
+      ACTIVE_FIRE_MONITOR_KEY:
+        required: false
+        type: string
+        default: ""
+      AREA_RESTRICTIONS_MONITOR_KEY:
+        required: false
+        type: string
+        default: ""
+      EVACUATION_MONITOR_KEY:
+        required: false
+        type: string
+        default: ""
+      LAMBDA_LAYER_KEY:
+        required: false
+        type: string
+        default: ""
+      FUNCTION_BUCKET:
+        required: false
+        type: string
+        default: "wfnews-lambdas"
+      #POINTID API VARIABLES
+      DATABASE_WEATHER_URL:
+        required: false
+        type: string
+        default: ""
+      DATABASE_WEATHER_USER:
+        required: false
+        type: string
+        default: ""
+      BCGW_URL:
+        required: false
+        type: string
+        default: ""
+      WFGS_URL:
+        required: false
+        type: string
+        default: ""
+      MAX_ALLOWED_RADIUS:
+        required: false
+        type: number
+        default: 1000
+      ASYNC_JOB_INTERVAL:
+        required: false
+        type: number
+        default: 900000
+      ASYNC_JOB_REF_LAT:
+        required: false
+        type: number
+        default: 55.2758
+      ASYNC_JOB_REF_LONG: 
+        required: false
+        type: number
+        default: -124.8509
+      ASYNC_JOB_REF_RADIUS:
+        required: false
+        type: number
+        default: 999
+      WEATHER_HOST:
+        required: false
+        type: string
+        default: ""
+      WEATHER_USER:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_URL:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_AREA_RESTRICTIONS:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_BANS_PROHIBITION_AREAS:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_DANGER_RATING:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_ACTIVE_FIRES:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_FIRE_CENTRE_BOUNDARIES:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_QUEUESIZE:
+        required: false
+        type: number
+        default: 1500
+      WEBADE_OAUTH2_CLIENT_ID:
+        required: false
+        type: string
+        default: ""
+      WEBADE_OAUTH2_TOKEN_URL:
+        required: false
+        type: string
+        default: ""
+      WEBADE_OAUTH2_CLIENT_SCOPES:
+        required: false
+        type: string
+        default: ""
+      FIREWEATHER_BASEURL:
+        required: false
+        type: string
+        default: ""
+      FIREWEATHER_QUEUESIZE:
+        required: false
+        type: number
+        default: 1500
+      WFNEWS_BASEURL:
+        required: false
+        type: string
+        default: ""
+      WFNEWS_QUEUESIZE:
+        required: false
+        type: number
+        default: 1500
+
 
 env:
-  TF_VERSION: 1.2.2
+  TF_VERSION: 1.5.3
   TG_VERSION: 0.48.4
   TG_SRC_PATH: terraform
-  REGISTRY: ghcr.io
-  CLIENT_IMAGE: "wfnews-client"
-  SERVER_IMAGE: "wfnews-server"
-  LIQUIBASE_IMAGE: "wfnews-liquibase"
-  APISIX_IMAGE: "wfnews-apisix"
-  API_KEY: "default"
-  TARGET_ENV: "dev"
-  ALB_NAME: "default"
-  VPC_NAME: "Dev_vpc"
-  SUBNET_FILTER: "App"
-  WEBADE_OAUTH2_AUTHORIZE_URL: "default"
-  WEBADE_OAUTH2_CLIENT_ID: "default"
-  WEBADE-OAUTH2_TOKEN_CLIENT_URL: "default"
-  WEBADE-OAUTH2_TOKEN_URL: "default"
-  WFDM_REST_URL: "default"
-  WFIM_CLIENT_URL: "default"
-  WFIM_CODE_TABLES_URL: "default"
-  WEBADE-OAUTH2_CHECK_TOKEN_URL: "default"
-  WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: "default"
-  SMTP_HOST_NAME: "default"
-  SMTP_FROM_EMAIL: "default"
-  SMTP_ADMIN_EMAIL: "default"
-  SMTP_EMAIL_SYNC_ERROR_FREQ: 10
-  SMTP_EMAIL_FREQ: 10
-  SMTP_EMAIL_ERROR_SUBJECT: "default"
-  SMTP_EMAIL_SUBJECT: "default"
-  DEFAULT_APPLICATION_ENVIRONMENT: "default"
-  WFNEWS_AGOL_QUERY_URL: "default"
-  SMTP_PASSWORD: "default"
-  WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: "default"
-  WFNEWS_USERNAME: "default"
-  WFNEWS_MAX_CONNECTIONS: 10
-  SNS_EMAIL_TARGETS: "test@test.com, test2@test.com"
-  MAX_RECEIVED_COUNT: 10
-  VISIBILITY_TIMEOUT_SECONDS: 100
-  ACCEPTED_IPS: ""
-  PUSH_NOTIFICATION_AWS_USER: ""
-  EVENT_BRIDGE_ARN: ""
-  WFNEWS_URL: ""
-  SECRET_NAME: ""
-  BAN_PROHIBITION_MONITOR_KEY: ""
-  ACTIVE_FIRE_MONITOR_KEY: ""
-  AREA_RESTRICTIONS_MONITOR_KEY: ""
-  EVACUATION_MONITOR_KEY: ""
-  LAMBDA_LAYER_KEY: ""
-  FUNCTION_BUCKET: "wfnews-lambdas"
+  TFC_WORKSPACE: wfnews-${{ inputs.TARGET_ENV }}
+  REPOSITORY: ghcr.io
 
 jobs:
   plan:
@@ -83,59 +208,127 @@ jobs:
       - name: Terragrunt Plan
         working-directory: ${{env.TG_SRC_PATH}}/${{ env.TARGET_ENV }}
         env:
-          TARGET_ENV: ${{env.TARGET_ENV}}
-          CLIENT_IMAGE: ${{env.registry}}/bcgov/${{ env.CLIENT_IMAGE }}:pr-${{ github.event.pull_request.number }}
-          SERVER_IMAGE: ${{env.registry}}/bcgov/${{ env.SERVER_IMAGE }}:pr-${{ github.event.pull_request.number }}
-          LIQUIBASE_IMAGE: ${{env.registry}}/bcgov/${{ env.LIQUIBASE_IMAGE }}:pr-${{ github.event.pull_request.number }}
-          APISIX_IMAGE: ${{env.registry}}/bcgov/${{ env.APISIX_IMAGE }}:pr-${{ github.event.pull_request.number }}
-          API_KEY: ${{ secrets.API_KEY }}
+          agolAreaRestrictions: ${{vars.AGOL_AREA_RESTRICTIONS}}
+          agolBansAndProhibitions: ${{vars.AGOL_BANS_AND_PROHIBITIONS}}
+          agolUrl: ${{vars.AGOL_URL}}
+          ALB_NAME: ${{ vars.ALB_NAME }}
+          API_KEY: ${{ secrets.API_KEY_DEV }}
+          APISIX_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.APISIX_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          CLIENT_CPU_UNITS: ${{vars.CLIENT_CPU_UNITS}}
+          CLIENT_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.CLIENT_IMAGE }}${{ inputs.IS_HOTFIX=='true' && '-hotfix' }}:${{ inputs.IMAGE_TAG }}
+          CLIENT_MEMORY: ${{vars.CLIENT_MEMORY}}
+          CLOUDFRONT_HEADER: ${{ secrets.CLOUDFRONT_HEADER }}
+          DB_INSTANCE_TYPE: ${{vars.DB_INSTANCE_TYPE}}
+          DB_PASS: ${{ secrets.DEV_DB_PASS }}
+          DB_SIZE: ${{ vars.DB_SIZE }}
+          DEFAULT_APPLICATION_ENVIRONMENT: ${{inputs.DEFAULT_APPLICATION_ENVIRONMENT}}
+          drivebcBaseUrl: ${{vars.DRIVEBC_BASE_URL}}
+          GITHUB_RELEASE_NAME: ${{ github.event.release.name }}
+          INSTANCE_COUNT: ${{vars.INSTANCE_COUNT}}
+          LIQUIBASE_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          LOGGING_LEVEL: ${{vars.LOGGING_LEVEL}}
+          MAX_UPLOAD_SIZE: ${{ vars.MAX_UPLOAD_SIZE }}
+          openmapsBaseUrl: ${{vars.OPENMAPS_BASE_URL}}
+          SERVER_CPU_UNITS: ${{vars.SERVER_CPU_UNITS}}
+          SERVER_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.SERVER_IMAGE }}${{ inputs.IS_HOTFIX == 'true' && '-hotfix' }}:${{ inputs.IMAGE_TAG }}
+          SERVER_MEMORY: ${{vars.SERVER_MEMORY}}
+          siteMinderURLPrefix: ${{vars.SITEMINDER_URL_PREFIX}}
+          SMTP_ADMIN_EMAIL: ${{vars.SMTP_ADMIN_EMAIL}}
+          SMTP_EMAIL_ERROR_SUBJECT: ${{vars.SMTP_EMAIL_ERROR_SUBJECT}}
+          SMTP_EMAIL_FREQ: ${{vars.SMTP_EMAIL_FREQ}}
+          SMTP_EMAIL_SUBJECT: ${{vars.SMTP_EMAIL_SUBJECT}}
+          SMTP_EMAIL_SYNC_ERROR_FREQ: ${{vars.SMTP_EMAIL_SYNC_ERROR_FREQ}}
+          SMTP_FROM_EMAIL: ${{vars.SMTP_FROM_EMAIL}}
+          SMTP_HOST_NAME: ${{vars.SMTP_HOST_NAME}}
+          SMTP_PASSWORD: ${{secrets.DEV_SMTP_PASSWORD}}
+          SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS_DEV }}
+          SUBNET_FILTER: ${{ vars.SUBNET_FILTER }}
+          TARGET_ENV: ${{ inputs.TARGET_ENV }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
-          DB_PASS: dbTESTsecretUNUSED
-          ALB_NAME: ${{ env.ALB_NAME }}
-          VPC_NAME: ${{ env.VPC_NAME }}
-          SUBNET_FILTER: ${{ env.SUBNET_FILTER }}
-          WEBADE_OAUTH2_CLIENT_ID: ${{env.WEBADE_OAUTH2_CLIENT_ID}}
-          WEBADE-OAUTH2_TOKEN_CLIENT_URL: ${{env.WEBADE-OAUTH2_TOKEN_CLIENT_URL}}
-          WEBADE-OAUTH2_TOKEN_URL: ${{env.WEBADE-OAUTH2_TOKEN_URL}}
-          WEBADE_OAUTH2_AUTHORIZE_URL: ${{env.WEBADE_OAUTH2_AUTHORIZE_URL}}
-          WFDM_REST_URL: ${{env.WFDM_REST_URL}}
-          WFIM_CLIENT_URL: ${{env.WFIM_CLIENT_URL}}
-          WFIM_CODE_TABLES_URL: ${{env.WFIM_CODE_TABLES_URL}}
-          WEBADE-OAUTH2_CHECK_TOKEN_URL: ${{env.WEBADE-OAUTH2_CHECK_TOKEN_URL}}
-          WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: ${{env.WFNEWS_EMAIL_NOTIFICATIONS_ENABLED}}
-          SMTP_HOST_NAME: ${{env.SMTP_HOST_NAME}}
-          SMTP_FROM_EMAIL: ${{env.SMTP_FROM_EMAIL}}
-          SMTP_ADMIN_EMAIL: ${{env.SMTP_ADMIN_EMAIL}}
-          SMTP_EMAIL_SYNC_ERROR_FREQ: ${{env.SMTP_EMAIL_SYNC_ERROR_FREQ}}
-          SMTP_EMAIL_FREQ: ${{env.SMTP_EMAIL_FREQ}}
-          SMTP_EMAIL_ERROR_SUBJECT: ${{env.SMTP_EMAIL_ERROR_SUBJECT}}
-          SMTP_EMAIL_SUBJECT: ${{env.SMTP_EMAIL_SUBJECT}}
-          DEFAULT_APPLICATION_ENVIRONMENT: ${{env.DEFAULT_APPLICATION_ENVIRONMENT}}
-          WFNEWS_AGOL_QUERY_URL: ${{env.WFNEWS_AGOL_QUERY_URL}}
-          SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
-          WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET}}
-          WFNEWS_USERNAME: ${{env.WFNEWS_USERNAME}}
-          WFNEWS_MAX_CONNECTIONS: ${{env.WFNEWS_MAX_CONNECTIONS}}
-          SNS_EMAIL_TARGETS: ${{env.SNS_EMAIL_TARGETS}}
-          agolUrl: test.test
-          drivebcBaseUrl: test.test
-          openmapsBaseUrl: test.test
-          siteMinderURLPrefix: test.test
-          agolAreaRestrictions: test.test
-          agolBansAndProhibitions: test.test
-          MAX_RECEIVED_COUNT: ${{env.MAX_RECEIVED_COUNT}}
-          VISIBILITY_TIMEOUT_SECONDS: ${{env.VISIBILITY_TIMEOUT_SECONDS}}
-          ACCEPTED_IPS: ${{env.ACCEPTED_IPS}}
-          PUSH_NOTIFICATION_AWS_USER: ${{env.PUSH_NOTIFICATION_AWS_USER}}
-          EVENT_BRIDGE_ARN: ${{env.EVENT_BRIDGE_ARN}}
-          WFNEWS_URL: ${{env.WFNEWS_URL}}
-          SECRET_NAME: ${{env.SECRET_NAME}}
-          BAN_PROHIBITION_MONITOR_KEY: ${{env.BAN_PROHIBITION_MONITOR_KEY}}
-          ACTIVE_FIRE_MONITOR_KEY: ${{env.ACTIVE_FIRE_MONITOR_KEY}}
-          AREA_RESTRICTIONS_MONITOR_KEY: ${{env.AREA_RESTRICTIONS_MONITOR_KEY}}
-          EVACUATION_MONITOR_KEY: ${{env.EVACUATION_MONITOR_KEY}}
-          LAMBDA_LAYER_KEY: ${{env.LAMBDA_LAYER_KEY}}
-          FUNCTION_BUCKET: ${{env.FUNCTION_BUCKET}}
+          VPC_NAME: ${{ vars.VPC_NAME }}
+          WEBADE_OAUTH2_AUTHORIZE_URL: ${{vars.WEBADE_OAUTH2_AUTHORIZE_URL}}
+          WEBADE_OAUTH2_REST_CLIENT_ID: ${{vars.WEBADE_OAUTH2_REST_CLIENT_ID}}
+          WEBADE_OAUTH2_UI_CLIENT_ID: ${{vars.WEBADE_OAUTH2_UI_CLIENT_ID}}
+          WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.DEV_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET}}
+          WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET: ${{secrets.DEV_WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
+          WEBADE-OAUTH2_CHECK_TOKEN_URL: ${{vars.WEBADE_OAUTH2_CHECK_TOKEN_URL}}
+          WEBADE-OAUTH2_TOKEN_CLIENT_URL: ${{vars.WEBADE_OAUTH2_TOKEN_CLIENT_URL}}
+          WEBADE-OAUTH2_TOKEN_URL: ${{vars.WEBADE_OAUTH2_TOKEN_URL}}
+          WFDM_REST_URL: ${{vars.WFDM_REST_URL}}
+          WFIM_CLIENT_URL: ${{vars.WFIM_CLIENT_URL}}
+          WFIM_CODE_TABLES_URL: ${{vars.WFIM_CODE_TABLES_URL}}
+          WFNEWS_AGOL_QUERY_URL: ${{vars.WFNEWS_AGOL_QUERY_URL}}
+          WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: ${{vars.WFNEWS_EMAIL_NOTIFICATIONS_ENABLED}}
+          WFNEWS_MAX_CONNECTIONS: ${{vars.WFNEWS_MAX_CONNECTIONS}}
+          WFNEWS_USERNAME: ${{vars.WFNEWS_USERNAME}}
 
-        run: terragrunt plan --terragrunt-non-interactive
+          MAX_RECEIVED_COUNT: ${{inputs.MAX_RECEIVED_COUNT }}
+          VISIBILITY_TIMEOUT_SECONDS: ${{inputs.VISIBILITY_TIMEOUT_SECONDS }}
+          ACCEPTED_IPS: ${{inputs.ACCEPTED_IPS }}
+          PUSH_NOTIFICATION_AWS_USER: ${{inputs.PUSH_NOTIFICATION_AWS_USER }}
+          EVENT_BRIDGE_ARN: ${{inputs.EVENT_BRIDGE_ARN }}
+          WFNEWS_URL: ${{inputs.WFNEWS_URL }}
+          SECRET_NAME: ${{inputs.SECRET_NAME }}
+          BAN_PROHIBITION_MONITOR_KEY: ${{inputs.BAN_PROHIBITION_MONITOR_KEY }}
+          ACTIVE_FIRE_MONITOR_KEY: ${{inputs.ACTIVE_FIRE_MONITOR_KEY }}
+          AREA_RESTRICTIONS_MONITOR_KEY: ${{inputs.AREA_RESTRICTIONS_MONITOR_KEY }}
+          EVACUATION_MONITOR_KEY: ${{inputs.EVACUATION_MONITOR_KEY }}
+          LAMBDA_LAYER_KEY: ${{inputs.LAMBDA_LAYER_KEY }}
+          FUNCTION_BUCKET: ${{inputs.FUNCTION_BUCKET}}
+
+          # POINTID API VARIABLES
+          DATABASE_WEATHER_URL: ${{ inputs.DATABASE_WEATHER_URL }}
+          DATABASE_WEATHER_USER: ${{inputs.DATABASE_WEATHER_USER }}
+          BCGW_URL: ${{inputs.BCGW_URL }}
+          WFGS_URL: ${{inputs.WFGS_URL }}
+          MAX_ALLOWED_RADIUS: ${{inputs.MAX_ALLOWED_RADIUS }}
+          ASYNC_JOB_INTERVAL: ${{inputs.ASYNC_JOB_INTERVAL }}
+          ASYNC_JOB_REF_LAT: ${{inputs.ASYNC_JOB_REF_LAT }}
+          ASYNC_JOB_REF_LONG: ${{inputs.ASYNC_JOB_REF_LONG }}
+          ASYNC_JOB_REF_RADIUS: ${{inputs.ASYNC_JOB_REF_RADIUS }}
+          WEATHER_HOST: ${{inputs.WEATHER_HOST }}
+          WEATHER_USER: ${{inputs.WEATHER_USER }}
+          WFARCGIS_URL: ${{inputs.WFARCGIS_URL }}
+          WFARCGIS_LAYER_AREA_RESTRICTIONS: ${{inputs.WFARCGIS_LAYER_AREA_RESTRICTIONS }}
+          WFARCGIS_LAYER_BANS_PROHIBITION_AREAS: ${{inputs.WFARCGIS_LAYER_BANS_PROHIBITION_AREAS }}
+          WFARCGIS_LAYER_DANGER_RATING: ${{inputs.WFARCGIS_LAYER_DANGER_RATING }}
+          WFARCGIS_LAYER_ACTIVE_FIRES: ${{inputs.WFARCGIS_LAYER_ACTIVE_FIRES }}
+          WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS: ${{inputs.WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS }}
+          WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES: ${{inputs.WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES }}
+          WFARCGIS_QUEUESIZE: ${{inputs.WFARCGIS_QUEUESIZE }}
+          WEBADE_OAUTH2_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_CLIENT_ID }}
+          WEBADE_OAUTH2_TOKEN_URL: ${{inputs.WEBADE_OAUTH2_TOKEN_URL }}
+          WEBADE_OAUTH2_CLIENT_SCOPES: ${{inputs.WEBADE_OAUTH2_CLIENT_SCOPES }}
+          FIREWEATHER_BASEURL: ${{inputs.FIREWEATHER_BASEURL }}
+          FIREWEATHER_QUEUESIZE: ${{inputs.FIREWEATHER_QUEUESIZE }}
+          WFNEWS_BASEURL: ${{inputs.WFNEWS_BASEURL }}
+          WFNEWS_QUEUESIZE: ${{inputs.WFNEWS_QUEUESIZE }}
+          DATABASE_WEATHER_PWD: ${{secrets.DATABASE_WEATHER_PWD_DEV }}
+          WEATHER_PASSWORD: ${{secrets.WEATHER_PASSWORD }}
+          WEBADE_OAUTH2_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_CLIENT_SECRET_DEV }}
+          POINTID_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.POINTID_IMAGE }}:${{ inputs.IMAGE_TAG }}
+
+          # WFONE NOTIFICATIONS API
+          WFONE_NOTIFICATIONS_API_DATASOURCE_MAX_CONNECTIONS: ${{vars.WFONE_NOTIFICATIONS_API_DATASOURCE_MAX_CONNECTIONS}}
+          WFONE_NOTIFICATIONS_API_DATASOURCE_PASSWORD: ${{secrets.WFONE_NOTIFICATIONS_API_DATASOURCE_PASSWORD}}
+          WFONE_NOTIFICATIONS_API_DATASOURCE_URL: ${{vars.WFONE_NOTIFICATIONS_API_DATASOURCE_URL}}
+          WFONE_NOTIFICATIONS_API_DATASOURCE_USER: ${{vars.WFONE_NOTIFICATIONS_API_DATASOURCE_USER}}
+          WFONE_NOTIFICATIONS_API_EMAIL_ADMIN_EMAIL: ${{vars.WFONE_NOTIFICATIONS_API_EMAIL_ADMIN_EMAIL}}
+          WFONE_NOTIFICATIONS_API_EMAIL_FROM_EMAIL: ${{vars.WFONE_NOTIFICATIONS_API_EMAIL_FROM_EMAIL}}
+          WFONE_NOTIFICATIONS_API_EMAIL_NOTIFICATIONS_ENABLED: ${{vars.WFONE_NOTIFICATIONS_API_EMAIL_NOTIFICATIONS_ENABLED}}
+          WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SEND_ERROR_FREQ: ${{vars.WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SEND_ERROR_FREQ}}
+          WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SEND_ERROR_SUBJECT: ${{vars.WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SEND_ERROR_SUBJECT}}
+          WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SEND_FREQ: ${{vars.WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SEND_FREQ}}
+          WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SUBJECT: ${{vars.WFONE_NOTIFICATIONS_API_EMAIL_SYNC_SUBJECT}}
+          WFONE_NOTIFICATIONS_API_PUSH_ITEM_EXPIRE_HOURS: ${{vars.WFONE_NOTIFICATIONS_API_PUSH_ITEM_EXPIRE_HOURS}}
+          WFONE_NOTIFICATIONS_API_QUARTZ_CONSUMER_INTERVAL_SECONDS: ${{vars.WFONE_NOTIFICATIONS_API_QUARTZ_CONSUMER_INTERVAL_SECONDS}}
+          WFONE_NOTIFICATIONS_API_SMTP_CREDENTIALS_PASSWORD: ${{secrets.WFONE_NOTIFICATIONS_API_SMTP_CREDENTIALS_PASSWORD}}
+          WFONE_NOTIFICATIONS_API_SMTP_CREDENTIALS_USER: ${{vars.WFONE_NOTIFICATIONS_API_SMTP_CREDENTIALS_USER}}
+          WFONE_NOTIFICATIONS_API_SMTP_HOST_NAME: ${{vars.WFONE_NOTIFICATIONS_API_SMTP_HOST_NAME}}
+          WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_CLIENT_ID: ${{vars.WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_CLIENT_ID}}
+          WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_REST_CLIENT_SECRET: ${{secrets.WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_REST_CLIENT_SECRET}}
+          WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_WFIM_CLIENT_ID: ${{vars.WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_CLIENT_ID}}
+          WFSS_POINTID_URL: ${{vars.WFSS_POINTID_URL}}
+
+        run: terragrunt apply --terragrunt-non-interactive
 
