--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -4,188 +4,13 @@ name: Plan using terragrunt
 
 on:
   workflow_dispatch:
-    inputs:
-      DEFAULT_APPLICATION_ENVIRONMENT:
-        required: false
-        type: string
-        default: DEV
-      TARGET_ENV:
-        required: false
-        type: string
-        default: dev
-      IMAGE_TAG:
-        required: false
-        type: string
-        default: "pr-877"
-      IS_HOTFIX:
-        required: false
-        type: string
-        default: 'false'
-
-      MAX_RECEIVED_COUNT:
-        required: false
-        type: number
-        default: 10
-      VISIBILITY_TIMEOUT_SECONDS:
-        required: false
-        type: number
-        default: 10
-      ACCEPTED_IPS:
-        required: false
-        type: string
-        default: ""
-      PUSH_NOTIFICATION_AWS_USER:
-        required: false
-        type: string
-        default: ""
-      EVENT_BRIDGE_ARN:
-        required: false
-        type: string
-        default: ""
-      WFNEWS_URL:
-        required: false
-        type: string
-        default: ""
-      SECRET_NAME:
-        required: false
-        type: string
-        default: ""
-      BAN_PROHIBITION_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      ACTIVE_FIRE_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      AREA_RESTRICTIONS_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      EVACUATION_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      LAMBDA_LAYER_KEY:
-        required: false
-        type: string
-        default: ""
-      FUNCTION_BUCKET:
-        required: false
-        type: string
-        default: "wfnews-lambdas"
-      #POINTID API VARIABLES
-      DATABASE_WEATHER_URL:
-        required: false
-        type: string
-        default: ""
-      DATABASE_WEATHER_USER:
-        required: false
-        type: string
-        default: ""
-      BCGW_URL:
-        required: false
-        type: string
-        default: ""
-      WFGS_URL:
-        required: false
-        type: string
-        default: ""
-      MAX_ALLOWED_RADIUS:
-        required: false
-        type: number
-        default: 1000
-      ASYNC_JOB_INTERVAL:
-        required: false
-        type: number
-        default: 900000
-      ASYNC_JOB_REF_LAT:
-        required: false
-        type: number
-        default: 55.2758
-      ASYNC_JOB_REF_LONG: 
-        required: false
-        type: number
-        default: -124.8509
-      ASYNC_JOB_REF_RADIUS:
-        required: false
-        type: number
-        default: 999
-      WEATHER_HOST:
-        required: false
-        type: string
-        default: ""
-      WEATHER_USER:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_URL:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_LAYER_AREA_RESTRICTIONS:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_LAYER_BANS_PROHIBITION_AREAS:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_LAYER_DANGER_RATING:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_LAYER_ACTIVE_FIRES:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_LAYER_FIRE_CENTRE_BOUNDARIES:
-        required: false
-        type: string
-        default: ""
-      WFARCGIS_QUEUESIZE:
-        required: false
-        type: number
-        default: 1500
-      WEBADE_OAUTH2_CLIENT_ID:
-        required: false
-        type: string
-        default: ""
-      WEBADE_OAUTH2_TOKEN_URL:
-        required: false
-        type: string
-        default: ""
-      WEBADE_OAUTH2_CLIENT_SCOPES:
-        required: false
-        type: string
-        default: ""
-      FIREWEATHER_BASEURL:
-        required: false
-        type: string
-        default: ""
-      FIREWEATHER_QUEUESIZE:
-        required: false
-        type: number
-        default: 1500
-      WFNEWS_BASEURL:
-        required: false
-        type: string
-        default: ""
-      WFNEWS_QUEUESIZE:
-        required: false
-        type: number
-        default: 1500
 
 
 env:
   TF_VERSION: 1.5.3
   TG_VERSION: 0.48.4
   TG_SRC_PATH: terraform
-  TFC_WORKSPACE: wfnews-${{ inputs.TARGET_ENV }}
+  TFC_WORKSPACE: wfnews-dev
   REPOSITORY: ghcr.io
 
 jobs:
@@ -213,24 +38,24 @@ jobs:
           agolUrl: ${{vars.AGOL_URL}}
           ALB_NAME: ${{ vars.ALB_NAME }}
           API_KEY: ${{ secrets.API_KEY_DEV }}
-          APISIX_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.APISIX_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          APISIX_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.APISIX_IMAGE }}:pr-877
           CLIENT_CPU_UNITS: ${{vars.CLIENT_CPU_UNITS}}
-          CLIENT_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.CLIENT_IMAGE }}${{ inputs.IS_HOTFIX=='true' && '-hotfix' }}:${{ inputs.IMAGE_TAG }}
+          CLIENT_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.CLIENT_IMAGE }}:pr-877
           CLIENT_MEMORY: ${{vars.CLIENT_MEMORY}}
           CLOUDFRONT_HEADER: ${{ secrets.CLOUDFRONT_HEADER }}
           DB_INSTANCE_TYPE: ${{vars.DB_INSTANCE_TYPE}}
           DB_PASS: ${{ secrets.DEV_DB_PASS }}
           DB_SIZE: ${{ vars.DB_SIZE }}
-          DEFAULT_APPLICATION_ENVIRONMENT: ${{inputs.DEFAULT_APPLICATION_ENVIRONMENT}}
+          DEFAULT_APPLICATION_ENVIRONMENT: DEV
           drivebcBaseUrl: ${{vars.DRIVEBC_BASE_URL}}
           GITHUB_RELEASE_NAME: ${{ github.event.release.name }}
           INSTANCE_COUNT: ${{vars.INSTANCE_COUNT}}
-          LIQUIBASE_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          LIQUIBASE_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.LIQUIBASE_IMAGE }}:pr-877
           LOGGING_LEVEL: ${{vars.LOGGING_LEVEL}}
           MAX_UPLOAD_SIZE: ${{ vars.MAX_UPLOAD_SIZE }}
           openmapsBaseUrl: ${{vars.OPENMAPS_BASE_URL}}
           SERVER_CPU_UNITS: ${{vars.SERVER_CPU_UNITS}}
-          SERVER_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.SERVER_IMAGE }}${{ inputs.IS_HOTFIX == 'true' && '-hotfix' }}:${{ inputs.IMAGE_TAG }}
+          SERVER_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.SERVER_IMAGE }}:pr-877
           SERVER_MEMORY: ${{vars.SERVER_MEMORY}}
           siteMinderURLPrefix: ${{vars.SITEMINDER_URL_PREFIX}}
           SMTP_ADMIN_EMAIL: ${{vars.SMTP_ADMIN_EMAIL}}
@@ -243,7 +68,7 @@ jobs:
           SMTP_PASSWORD: ${{secrets.DEV_SMTP_PASSWORD}}
           SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS_DEV }}
           SUBNET_FILTER: ${{ vars.SUBNET_FILTER }}
-          TARGET_ENV: ${{ inputs.TARGET_ENV }}
+          TARGET_ENV: dev
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           VPC_NAME: ${{ vars.VPC_NAME }}
           WEBADE_OAUTH2_AUTHORIZE_URL: ${{vars.WEBADE_OAUTH2_AUTHORIZE_URL}}
@@ -262,51 +87,50 @@ jobs:
           WFNEWS_MAX_CONNECTIONS: ${{vars.WFNEWS_MAX_CONNECTIONS}}
           WFNEWS_USERNAME: ${{vars.WFNEWS_USERNAME}}
 
-          MAX_RECEIVED_COUNT: ${{inputs.MAX_RECEIVED_COUNT }}
-          VISIBILITY_TIMEOUT_SECONDS: ${{inputs.VISIBILITY_TIMEOUT_SECONDS }}
-          ACCEPTED_IPS: ${{inputs.ACCEPTED_IPS }}
-          PUSH_NOTIFICATION_AWS_USER: ${{inputs.PUSH_NOTIFICATION_AWS_USER }}
-          EVENT_BRIDGE_ARN: ${{inputs.EVENT_BRIDGE_ARN }}
-          WFNEWS_URL: ${{inputs.WFNEWS_URL }}
-          SECRET_NAME: ${{inputs.SECRET_NAME }}
-          BAN_PROHIBITION_MONITOR_KEY: ${{inputs.BAN_PROHIBITION_MONITOR_KEY }}
-          ACTIVE_FIRE_MONITOR_KEY: ${{inputs.ACTIVE_FIRE_MONITOR_KEY }}
-          AREA_RESTRICTIONS_MONITOR_KEY: ${{inputs.AREA_RESTRICTIONS_MONITOR_KEY }}
-          EVACUATION_MONITOR_KEY: ${{inputs.EVACUATION_MONITOR_KEY }}
-          LAMBDA_LAYER_KEY: ${{inputs.LAMBDA_LAYER_KEY }}
-          FUNCTION_BUCKET: ${{inputs.FUNCTION_BUCKET}}
+          MAX_RECEIVED_COUNT: 10
+          VISIBILITY_TIMEOUT_SECONDS: 10
+          ACCEPTED_IPS: 
+          PUSH_NOTIFICATION_AWS_USER: 
+          EVENT_BRIDGE_ARN: 
+          WFNEWS_URL: 
+          SECRET_NAME: 
+          BAN_PROHIBITION_MONITOR_KEY:
+          ACTIVE_FIRE_MONITOR_KEY: 
+          AREA_RESTRICTIONS_MONITOR_KEY:
+          EVACUATION_MONITOR_KEY:
+          LAMBDA_LAYER_KEY:
+          FUNCTION_BUCKET: wfnews-lambdas
 
           # POINTID API VARIABLES
-          DATABASE_WEATHER_URL: ${{ inputs.DATABASE_WEATHER_URL }}
-          DATABASE_WEATHER_USER: ${{inputs.DATABASE_WEATHER_USER }}
-          BCGW_URL: ${{inputs.BCGW_URL }}
-          WFGS_URL: ${{inputs.WFGS_URL }}
-          MAX_ALLOWED_RADIUS: ${{inputs.MAX_ALLOWED_RADIUS }}
-          ASYNC_JOB_INTERVAL: ${{inputs.ASYNC_JOB_INTERVAL }}
-          ASYNC_JOB_REF_LAT: ${{inputs.ASYNC_JOB_REF_LAT }}
-          ASYNC_JOB_REF_LONG: ${{inputs.ASYNC_JOB_REF_LONG }}
-          ASYNC_JOB_REF_RADIUS: ${{inputs.ASYNC_JOB_REF_RADIUS }}
-          WEATHER_HOST: ${{inputs.WEATHER_HOST }}
-          WEATHER_USER: ${{inputs.WEATHER_USER }}
-          WFARCGIS_URL: ${{inputs.WFARCGIS_URL }}
-          WFARCGIS_LAYER_AREA_RESTRICTIONS: ${{inputs.WFARCGIS_LAYER_AREA_RESTRICTIONS }}
-          WFARCGIS_LAYER_BANS_PROHIBITION_AREAS: ${{inputs.WFARCGIS_LAYER_BANS_PROHIBITION_AREAS }}
-          WFARCGIS_LAYER_DANGER_RATING: ${{inputs.WFARCGIS_LAYER_DANGER_RATING }}
-          WFARCGIS_LAYER_ACTIVE_FIRES: ${{inputs.WFARCGIS_LAYER_ACTIVE_FIRES }}
-          WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS: ${{inputs.WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS }}
-          WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES: ${{inputs.WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES }}
-          WFARCGIS_QUEUESIZE: ${{inputs.WFARCGIS_QUEUESIZE }}
-          WEBADE_OAUTH2_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_CLIENT_ID }}
-          WEBADE_OAUTH2_TOKEN_URL: ${{inputs.WEBADE_OAUTH2_TOKEN_URL }}
-          WEBADE_OAUTH2_CLIENT_SCOPES: ${{inputs.WEBADE_OAUTH2_CLIENT_SCOPES }}
-          FIREWEATHER_BASEURL: ${{inputs.FIREWEATHER_BASEURL }}
-          FIREWEATHER_QUEUESIZE: ${{inputs.FIREWEATHER_QUEUESIZE }}
-          WFNEWS_BASEURL: ${{inputs.WFNEWS_BASEURL }}
-          WFNEWS_QUEUESIZE: ${{inputs.WFNEWS_QUEUESIZE }}
+          DATABASE_WEATHER_URL: 
+          DATABASE_WEATHER_USER: 
+          BCGW_URL: 
+          WFGS_URL: 
+          MAX_ALLOWED_RADIUS: 999
+          ASYNC_JOB_INTERVAL: 99999
+          ASYNC_JOB_REF_LAT: 50
+          ASYNC_JOB_REF_LONG: -120
+          ASYNC_JOB_REF_RADIUS: 1000
+          WEATHER_HOST:
+          WEATHER_USER:
+          WFARCGIS_URL:
+          WFARCGIS_LAYER_AREA_RESTRICTIONS:
+          WFARCGIS_LAYER_BANS_PROHIBITION_AREAS:
+          WFARCGIS_LAYER_DANGER_RATING:
+          WFARCGIS_LAYER_ACTIVE_FIRES: 
+          WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS:
+          WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES:
+          WEBADE_OAUTH2_CLIENT_ID: 
+          WEBADE_OAUTH2_TOKEN_URL: 
+          WEBADE_OAUTH2_CLIENT_SCOPES: 
+          FIREWEATHER_BASEURL: 
+          FIREWEATHER_QUEUESIZE: 1500
+          WFNEWS_BASEURL: 
+          WFNEWS_QUEUESIZE: 1500
           DATABASE_WEATHER_PWD: ${{secrets.DATABASE_WEATHER_PWD_DEV }}
           WEATHER_PASSWORD: ${{secrets.WEATHER_PASSWORD }}
           WEBADE_OAUTH2_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_CLIENT_SECRET_DEV }}
-          POINTID_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.POINTID_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          POINTID_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.POINTID_IMAGE }}:pr-877
 
           # WFONE NOTIFICATIONS API
           WFONE_NOTIFICATIONS_API_DATASOURCE_MAX_CONNECTIONS: ${{vars.WFONE_NOTIFICATIONS_API_DATASOURCE_MAX_CONNECTIONS}}
